--- a/style.css
+++ b/style.css
@@ -159,33 +159,6 @@ ul li span:hover{
     
 
  }
- .dropdown-content{
-    display: none;
-    position: absolute;
-    background-color:rgb(202, 200, 200) ;
-    min-width:160px;
-    border: 1px solid lightseagreen;
-    box-shadow: 0px 8px 16px 0px lightseagreen;
-    color:lightseagreen;
-    z-index:1;
-    border-radius: 10px;
- }
-
- .dropdown-content a{
-    color: black;
-    font-size: 20px;
-    padding: 12px 8px;
-    text-decoration: none;
-    display: block;
- }
-
- .dropdown-content a:hover{
-    background-color: #f1f1f1;
-    border-radius: 10px;
- }
- .dropdown:hover .dropdown-content{
-    display: block;
- }
 
  .foot{
     display: flex;
@@ -222,6 +195,12 @@ ul li span:hover{
     transition: 0.5s;
     position: relative;
   }
+  #filter:hover{
+    color:black;
+    background-color: lightseagreen;
+    box-shadow: 4px 0px 16px 4px lightseagreen;
+  }
+  
   /*responsive*/
   @media only screen and (max-width: 530px) {
     .container {
